fix(WebView): Remove double scroll in webview

--- a/app/css/pane.css
+++ b/app/css/pane.css
@@ -22,10 +22,6 @@
   width: 100%;
 }
 
-.Pane > webview {
-  overflow: scroll;
-}
-
 .Resizer {
   background: #000;
   opacity: .2;
